<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
		android:id="@+id/action_scan"
		android:titleCondensed="Scan"
		android:enabled="true"
		android:menuCategory="secondary"
		android:checkable="false"
		android:title="@string/scan_isbn"
		android:visible="true"
		android:showAsAction="ifRoom"
		android:icon="@drawable/barcode"></item>
    <item android:id="@+id/action_delete"
		android:title="@string/delete"
		android:icon="@android:drawable/ic_delete"
		android:menuCategory="secondary"
		android:enabled="true"
		android:visible="true"
		android:checkable="false"
		android:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    

</menu>
