<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".BookActivity" >

        <EditText
            android:id="@+id/book_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="@string/title"
            android:textSize="@dimen/book_list_title_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/book_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/book_title"
            android:layout_below="@id/book_title"
            android:ems="10"
            android:hint="@string/subtitle" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/book_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/book_authors"
            android:text="@string/by" />

        <EditText
            android:id="@+id/book_authors"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_subtitle"
            android:layout_toRightOf="@id/book_by"
            android:ems="10"
            android:hint="@string/authors" />

        <ImageView
            android:id="@+id/book_thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_authors"
            android:layout_centerHorizontal="true"
            android:src="@drawable/nothumb" />

        <EditText
            android:id="@+id/book_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_thumb"
            android:ems="10"
            android:hint="@string/desc"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/book_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/book_isbn"
            android:text="@string/id" />

        <TextView
            android:id="@+id/book_volid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/book_isbn"
            android:layout_toLeftOf="@+id/book_isbn_label"
            android:layout_toRightOf="@id/book_id_label" />

        <TextView
            android:id="@+id/book_isbn_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/book_isbn"
            android:layout_alignBottom="@+id/book_volid"
            android:layout_alignLeft="@+id/book_thumb"
            android:text="@string/isbn" />

        <EditText
            android:id="@+id/book_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/book_desc"
            android:layout_toRightOf="@+id/book_isbn_label"
            android:ems="10" />

    </RelativeLayout>

</ScrollView>
